# SafeStorage

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  cmake.yaml
Core/: CMakeLists.txt  Constants.hpp  Key.cpp  Key.hpp  PasswordChecker.cpp  PasswordChecker.hpp  PasswordGenerator.cpp  PasswordGenerator.hpp  Settings.cpp  Settings.hpp  Util.cpp  Util.hpp
Core/Crypto/: AES.cpp  AES.hpp  ChaCha20.cpp  ChaCha20.hpp  Cipher.hpp  Grasshopper.cpp  Grasshopper.hpp  Key.cpp  Key.hpp  Obfuscator.cpp  Obfuscator.hpp  Types.hpp  Util.hpp
Core/Stream/: Exception.hpp  GZip.cpp  GZip.hpp  Hashed.cpp  Hashed.hpp
Core/Struct/: CMakeLists.txt  Entry.cpp  Entry.hpp  Header.cpp  Header.hpp  Layer.cpp  Layer.hpp  Obfuscator.hpp  Storage.cpp  Storage.hpp
SafeStorage/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
SafeStorage/delegate/: RowColorDelegate.hpp
SafeStorage/model/: PasswordsModel.cpp  PasswordsModel.hpp
SafeStorage/res/theme/dark/: darkstyle.qrc
SafeStorage/ui/: MainWindow.ui
Test/: CMakeLists.txt  CryptoTest.cpp  StreamTest.cpp
